--- a/asset/css/daterangepicker.css
+++ b/asset/css/daterangepicker.css
@@ -267,3 +267,6 @@
     float: right; }
   .daterangepicker .calendar.left {
     clear: none !important; } }
+  .origin-datepicker {
+    text-align: center;
+  }
